--- a/index.html
+++ b/index.html
@@ -43,5 +43,37 @@
         </nav>
       </div>
     </header>
+    <main>
+      <section class="about">
+        <div class="container">
+          <div class="about__inner">
+            <div class="about__inner-txt">
+              <h2 class="about__inner-title">About Us</h2>
+              <p>The model offers a framework for discussing problems related to the user's experience, as well as possible ways and means of solving them. Application development begins at the top level (strategy), where the future software product is described quite abstractly from the point of view of the expectations of both users and the customer.
+              </p>
+              <ul class="about__inner-list">
+                <li class="about__inner-item">
+                  <h3>800</h3>
+                  <p>Pupils</p>
+                </li>
+                <li class="about__inner-item">
+                  <h3>18</h3>
+                  <p>Teachers</p>
+                </li>
+                <li class="about__inner-item">
+                  <h3>6</h3>
+                  <p>Foreign languages</p>
+                </li>
+              </ul>
+            </div>
+            <div class="about__inner-img">
+              <img src="img/AboutUs.png" alt="about-Britlex">
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </main>
+    <script src="js/script.js"></script>
   </body>
 </html>
