--- a/index.html
+++ b/index.html
@@ -72,8 +72,49 @@
           </div>
         </div>
       </section>
-
+      <section class="contact">
+        <div class="container">
+          <div class="contact__inner">
+            <div class="contact__inner-img">
+              <img src="img/Contact.png">
+            </div>
+            <div class="contact__inner-form">
+              <h2 class="section-title">Contact Us</h2>
+              <p>
+                Discover your current English level by taking our free online English test.Sign up to our newsletter for learning tips and free resources
+              </p>
+              <form method="POST">
+                <input class="form-email" type="email" id="email" name="email" placeholder="Enter Your E-mail">
+                <input type="submit" value="Subscribe">
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="container">
+        <div class="footer-line"></div>
+        <div class="footer__inner">
+          <div class="footer__inner-img">
+          <img src="img/Logo.svg">
+        </div>
+          <ul>
+          <li class="footer__inner-list">
+            <a class="footer__inner-link" href="#">Terms and Conditions</a>
+          </li>
+          <li class="footer__inner-list">
+            <a class="footer__inner-link" href="#">Privacy Policy</a>
+          </li>
+          <li class="footer__inner-list">
+            <a class="footer__inner-link" href="#">Cookie Policy</a>
+          </li>
+        </ul>
+        </div>
+      </div>
+    </footer>
+    </main>
+    
     <script src="js/script.js"></script>
   </body>
 </html>
