--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       </div>
     </header>
     <main>
+      <section>
+        <div class="blog"></div>
+      </section>
       <section class="about">
         <div class="container">
           <div class="about__inner">
