--- a/index.html
+++ b/index.html
@@ -43,8 +43,23 @@
         </div>
       </div>
     </header>
-
-    <section class="skills" id="skills">
+  <section class="main">
+    <div class="container">
+        <div class="main__inner">
+            <div class="main__inner-txt">
+                 <h1 class="main__inner-title"> Learn <br> Any Foreign <br> Language </h1>
+                    <img src="img/light-bulb-svgrepo-com 1.png" alt="svg-img"  class="main__inner-svg">
+                <p>With our teachers who write a program for each student, you will be able to make your
+                    first sketch after the first lesson.</p>
+                <button class="main__inner-btn">Get started</button>
+             </div>
+            <div class="main__inner-img">  
+                <img src="/img/Learning languages-bro 1.png" alt="learn languages">
+            </div>
+        </div>
+    </div>
+</section>
+ <section class="skills" id="skills">
       <div class="container">
         <div class="skills__inner">
           <h2 class="skills__title">Skills</h2>
