--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <button class="main__inner-btn">Get started</button>
              </div>
             <div class="main__inner-img">  
-                <img src="/img/Learning languages-bro 1.png" alt="learn languages">
+                <img src="img/Learning languages-bro 1.png" alt="learn languages">
             </div>
         </div>
     </div>
@@ -171,7 +171,7 @@
               </ul>
             </div>
             <div class="about__inner-column">
-              <img class="about__inner-img" src="img/aboutUs.png" alt="about-Britlex" />
+              <img class="about__inner-img" src="img/AboutUs.png" alt="about-Britlex" />
             </div>
           </div>
         </div>
@@ -232,7 +232,7 @@
         <div class="container">
           <div class="contact__inner">
             <div class="contact__inner-column">
-              <img class="contact__inner-img" src="img/contact.png" alt="contact_us"/>
+              <img class="contact__inner-img" src="img/Contact.png" alt="contact_us"/>
             </div>
             <div class="contact__inner-column">
               <h2 class="section-title">Contact us</h2>
