--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Britlex</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
@@ -19,7 +21,7 @@
             <img class="img" src="img/Logo.svg" alt="logo" />
           </div>
           <button class="menu-toggler">
-            <img src="img/icons8-меню-50.png" alt="menuburger" />
+            <img src="img/menu-burger.png" alt="menuburger" />
           </button>
 
           <nav class="header__nav">
@@ -37,7 +39,7 @@
                 <a class="menu__link" href="#pricing">Pricing</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="">Contacts</a>
+                <a class="menu__link" href="#contacts">Contacts</a>
               </li>
               <li>
                 <button class="header__button">Let's Talk</button>
@@ -47,102 +49,111 @@
         </div>
       </div>
     </header>
-  <section class="main">
-    <div class="container">
-        <div class="main__inner">
-            <div class="main__inner-txt">
-                 <h1 class="main__inner-title"> Learn <br> Any Foreign <br> Language </h1>
-                    <img src="img/light-bulb-svgrepo-com 1.png" alt="svg-img"  class="main__inner-svg">
-                <p>With our teachers who write a program for each student, you will be able to make your
-                    first sketch after the first lesson.</p>
-                <button class="main__inner-btn">Get started</button>
-             </div>
-            <div class="main__inner-img">  
-                <img src="img/Learning languages-bro 1.png" alt="learn languages">
-            </div>
-        </div>
-    </div>
- </section>
- <section class="skills" id="skills">
-    
     <main>
-    <section class="skills" id="skills">
-      <div class="container">
-        <div class="skills__inner">
-          <h2 class="skills__title">Skills</h2>
-          <div class="skills__wrapper">
-            <div class="skills__card1">
-              <img class="skills__img1" src="img/Skills1.png" alt="Speaking" />
-              <h4 class="skills__wrapper-title skills__wrapper-title1">
-                Speaking
-              </h4>
-              <p class="skills__wrapper-txt skills__wrapper-txt1">
-                Improve your English skills and confidence. Live classes and
-                interactive lessons online.20% extra free for a limited time
-                only
-                <span class="skills__wrapper-txt1-2">
-                  Learn English online and improve your skills through our
-                  high-quality courses and resources - all designed for adult
-                  language learners.
-                </span>
+      <section class="main" id="home">
+        <div class="container">
+          <div class="main__inner">
+            <div class="main__inner-txt">
+              <h1 class="main__inner-title">
+                Learn <br />
+                Any Foreign <br />
+                Language
+              </h1>
+              <img src="img/lamp.png" alt="lamp" class="main__inner-svg" />
+              <p>
+                With our teachers who write a program for each student, you will
+                be able to make your first sketch after the first lesson.
               </p>
-              <div class="skills__link1">
-                <a class="skills__a1" href="#">Learn more</a>
-              </div>
+              <button class="main__inner-btn">Get started</button>
             </div>
-            <div class="skills__card2">
-              <img class="skills__img2" src="img/Skills2.png" alt="Writing" />
-              <h4 class="skills__wrapper-title skills__wrapper-title2">
-                Writing
-              </h4>
-              <p class="skills__wrapper-txt skills__wrapper-txt2">
-                One of the most important and extensive areas of natural
-                science, the science that studies substances, also their
-                composition
-              </p>
-              <div class="skills__link2">
-                <a class="skills__a" href="#">Learn more</a>
-              </div>
+            <div class="main__inner-img">
+              <img src="img/Learning-languages.png" alt="learning-girl" />
             </div>
-            <div class="skills__card3">
-              <img class="skills__img3" src="img/Skills3.png" alt="Reading" />
-              <h4 class="skills__wrapper-title skills__wrapper-title3">
-                Reading
-              </h4>
-              <p class="skills__wrapper-txt skills__wrapper-txt3">
-                perception and response actions of the user resulting from the
-                use and/or upcoming use of the product, system or service
-              </p>
-              <div class="skills__link3">
-                <a class="skills__a" href="#">Learn more</a>
-              </div>
-            </div>
-            <div class="skills__card4">
-              <div class="skills__left">
-                <h4 class="skills__wrapper-title skills__wrapper-title4">
-                  Listening
+          </div>
+        </div>
+      </section>
+      <section class="skills" id="skills">
+        <div class="container">
+          <div class="skills__inner">
+            <h2 class="skills__title">Skills</h2>
+            <div class="skills__wrapper">
+              <div class="skills__card1">
+                <img
+                  class="skills__img1"
+                  src="img/Skills1.png"
+                  alt="Speaking"
+                />
+                <h4 class="skills__wrapper-title skills__wrapper-title1">
+                  Speaking
                 </h4>
-                <p class="skills__wrapper-txt skills__wrapper-txt4">
-                  Here you can find activities to practise your listening
-                  skills. Listening will help you to improve your understanding
+                <p class="skills__wrapper-txt skills__wrapper-txt1">
+                  Improve your English skills and confidence. Live classes and
+                  interactive lessons online.20% extra free for a limited time
+                  only
+                  <span class="skills__wrapper-txt1-2">
+                    Learn English online and improve your skills through our
+                    high-quality courses and resources - all designed for adult
+                    language learners.
+                  </span>
                 </p>
-                <div class="skills__link4">
+                <div class="skills__link1">
+                  <a class="skills__a1" href="#">Learn more</a>
+                </div>
+              </div>
+              <div class="skills__card2">
+                <img class="skills__img2" src="img/Skills2.png" alt="Writing" />
+                <h4 class="skills__wrapper-title skills__wrapper-title2">
+                  Writing
+                </h4>
+                <p class="skills__wrapper-txt skills__wrapper-txt2">
+                  One of the most important and extensive areas of natural
+                  science, the science that studies substances, also their
+                  composition
+                </p>
+                <div class="skills__link2">
                   <a class="skills__a" href="#">Learn more</a>
                 </div>
               </div>
-              <div>
-                <img
-                  class="skills__img4"
-                  src="img/Skills4.png"
-                  alt="Listening"
-                />
+              <div class="skills__card3">
+                <img class="skills__img3" src="img/Skills3.png" alt="Reading" />
+                <h4 class="skills__wrapper-title skills__wrapper-title3">
+                  Reading
+                </h4>
+                <p class="skills__wrapper-txt skills__wrapper-txt3">
+                  perception and response actions of the user resulting from the
+                  use and/or upcoming use of the product, system or service
+                </p>
+                <div class="skills__link3">
+                  <a class="skills__a" href="#">Learn more</a>
+                </div>
+              </div>
+              <div class="skills__card4">
+                <div class="skills__left">
+                  <h4 class="skills__wrapper-title skills__wrapper-title4">
+                    Listening
+                  </h4>
+                  <p class="skills__wrapper-txt skills__wrapper-txt4">
+                    Here you can find activities to practise your listening
+                    skills. Listening will help you to improve your
+                    understanding
+                  </p>
+                  <div class="skills__link4">
+                    <a class="skills__a" href="#">Learn more</a>
+                  </div>
+                </div>
+                <div>
+                  <img
+                    class="skills__img4"
+                    src="img/Skills4.png"
+                    alt="Listening"
+                  />
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-      <section class="about">
+      </section>
+      <section class="about" id="about">
         <div class="container">
           <div class="about__inner">
             <div class="about__inner-column">
@@ -171,55 +182,59 @@
               </ul>
             </div>
             <div class="about__inner-column">
-              <img class="about__inner-img" src="img/AboutUs.png" alt="about-Britlex" />
+              <img
+                class="about__inner-img"
+                src="img/AboutUs.png"
+                alt="about-Britlex"
+              />
             </div>
           </div>
         </div>
       </section>
-      <section class="pricing">
+      <section class="pricing" id="pricing">
         <div class="container">
-         <div class="pricing__inner">
-           <div class="hero"><h2>Pricing</h2></div>
+          <div class="pricing__inner">
+            <div class="hero"><h2>Pricing</h2></div>
             <div class="hero-card">
               <ul class="hero-card-grid">
-               <li class="card1">
-                 <img
-                  class="img1"
-                  src="img/Pricing1.png"
-                  alt="online test-bro"
-                />
-                <h3>Self-study online course</h3>
-                <p>
-                  Start learning English online in live classes with qualified.
-                  EC teachers and students from all over the world.
-                </p>
-                <button class="price__blc-txt" href="#">
-                  <b>£5.99</b> <small>per month</small>
-                </button>
-                 </li>
+                <li class="card1">
+                  <img
+                    class="img1"
+                    src="img/Pricing1.png"
+                    alt="online test-bro"
+                  />
+                  <h3>Self-study online course</h3>
+                  <p>
+                    Start learning English online in live classes with
+                    qualified. EC teachers and students from all over the world.
+                  </p>
+                  <button class="price__blc-txt">
+                    <b>£5.99</b> <small>per month</small>
+                  </button>
+                </li>
                 <li class="card2">
-                <img src="img/Pricing2.png" alt="lesson-bro" />
-                <h3>Live online classes</h3>
-                <p>
-                  Interactive group classes with expert teachers. Free 7-day
-                  trial
-                </p>
-                <br />
-                <button class="price__blc-txt" href="#">
-                  <b>£12.99</b> <small>per month</small>
-                </button>
+                  <img src="img/Pricing2.png" alt="lesson-bro" />
+                  <h3>Live online classes</h3>
+                  <p>
+                    Interactive group classes with expert teachers. Free 7-day
+                    trial
+                  </p>
+                  <br />
+                  <button class="price__blc-txt">
+                    <b>£12.99</b> <small>per month</small>
+                  </button>
                 </li>
                 <li class="card3">
-                <img class="img3" src="img/Pricing3.png" alt="webinar-bro" />
-                <h3>Personal Tuition</h3>
-                <p>
-                  Online one-to-one English tutoring – enjoy our first session
-                  for only $1
-                </p>
-                <br />
-                <button class="price__blc-txt" href="#">
-                  <b>£20.99</b> <small>per month</small>
-                </button>
+                  <img class="img3" src="img/Pricing3.png" alt="webinar-bro" />
+                  <h3>Personal Tuition</h3>
+                  <p>
+                    Online one-to-one English tutoring – enjoy our first session
+                    for only $1
+                  </p>
+                  <br />
+                  <button class="price__blc-txt">
+                    <b>£20.99</b> <small>per month</small>
+                  </button>
                 </li>
               </ul>
             </div>
@@ -227,12 +242,15 @@
         </div>
       </section>
 
-
-      <section class="contact">
+      <section class="contact" id="contacts">
         <div class="container">
           <div class="contact__inner">
             <div class="contact__inner-column">
-              <img class="contact__inner-img" src="img/Contact.png" alt="contact_us"/>
+              <img
+                class="contact__inner-img"
+                src="img/Contact.png"
+                alt="contact_us"
+              />
             </div>
             <div class="contact__inner-column">
               <h2 class="section-title">Contact us</h2>
@@ -242,7 +260,13 @@
                 free resources
               </p>
               <form action="POST" class="contact__form">
-                <input class="contact-email" type="email" id="email" name="email" placeholder="Enter Your E-mail"/>
+                <input
+                  class="contact-email"
+                  type="email"
+                  id="email"
+                  name="email"
+                  placeholder="Enter Your E-mail"
+                />
                 <button class="btn contact-btn">Subscribe</button>
               </form>
             </div>
@@ -276,5 +300,4 @@
 
     <script src="js/script.js"></script>
   </body>
-  
 </html>
